--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lichih-yen.github.io/shopping-cart-react",
+  "homepage": "https://lichih-yen.github.io/shopping-cart-react",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
